home content overflow fix

--- a/src/app/client/client.component.sass
+++ b/src/app/client/client.component.sass
@@ -8,19 +8,17 @@
         width: 100%
         .header
             position: absolute
-            z-index: 1
             top: 0
             background-color: #FFFFFF
             width: 100%
             color: #243346
+            overflow: hidden
         .content
             // margin-top: 150px
+            overflow: hidden
         .footer
             background-color: #0F0E6A
             width: 100%
             color: #243346
-@media (max-width: 600px) 
-    .wrapper
-        width: 100%
 
 
